@@ -1,3 +1,8 @@
+2008-05-02  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-memory.c (_syx_memory_write_frame): fix stack pointer
+	(_syx_memory_write_lazy_pointer): fix on NULL process
+
 2008-05-01  Luca Bruno  <lethalman88@gmail.com>
 
         * syx/syx-memory.c:
